# nany-from-c

./: .gitignore  AUTHORS  README.md  TODO
src/: CMakeLists.txt  converter.cpp  converter.h  main.cpp
src/cmake/: FindLibClang.cmake  config.h.cmake  messages.cmake
src/parser/: parser.cpp  parser.h
src/writer/: indenter.h  visibilitystack.h  visitor.cpp  visitor.h
test/: break-continue.cpp  cast.cpp  class.cpp  classes.cpp  compile_commands.json  conditional.cpp  ctor-dtor.cpp  forwarddecl.cpp  funcptr.c  funcptr.cpp  literals.c  new.cpp  nullcast.c  operators.c  repetitive.cpp  resolvetypedef.c  strlen.c  switch.c  typedefstruct.c  unicode.c  uninit-var.c  vardecl.c
